feat: 添加更多的工具

--- a/content/blog/premium.mdx
+++ b/content/blog/premium.mdx
@@ -3,7 +3,7 @@ title: "Premium Blog Post"
 description: "This blog post is a test for premium content."
 date: "2025-08-30"
 published: true
-premium: true
+premium: false
 categories: ["product"]
 author: "fox"
 image: "https://cdn.mksaas.com/images/blog/post-7.png"
@@ -45,8 +45,6 @@ Test show YouTube video in the blog post.
 
 Now the rest of the blog post is premium content.
 
-<PremiumContent>
-
 <Callout type="info">
   This is the beginning of the premium content part.
 </Callout>
@@ -60,5 +58,3 @@ Please don't share this blog post with others.
 <Callout type="info">
   This is the end of the premium content part.
 </Callout>
-
-</PremiumContent>
