--- a/content/blog/premium.zh.mdx
+++ b/content/blog/premium.zh.mdx
@@ -3,7 +3,7 @@ title: "测试专用付费文章"
 description: "这是一篇测试专用付费文章。"
 date: "2025-08-30"
 published: true
-premium: true
+premium: false
 categories: ["product"]
 author: "fox"
 image: "https://cdn.mksaas.com/images/blog/post-7.png"
@@ -45,8 +45,6 @@ CVV: 567
 
 现在剩下的内容是付费内容。
 
-<PremiumContent>
-
 <Callout type="info">
   这是付费内容部分的开始。
 </Callout>
@@ -60,5 +58,3 @@ CVV: 567
 <Callout type="info">
   这是付费内容部分的结束。
 </Callout>
-
-</PremiumContent>
